Closed
Bug 323589
Opened 20 years ago
Closed 20 years ago
Trying to access .style of <svg:marker> throws "Component does not have requested interface" (NS_NOINTERFACE)
Categories
(Core :: SVG, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: longsonr)
References
Details
Attachments
(1 file)
|
1.65 KB,
patch
|
jwatt
:
review+
tor
:
superreview+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.9a1) Gecko/20060113 Firefox/1.6a1
Steps to reproduce:
1. Load
data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg'><marker/></svg>
2. javascript:alert(document.getElementsByTagName("marker")[0].style)
Result:
Error: uncaught exception: [Exception... "Component does not have requested interface [nsIDOMSVGStylable.style]" nsresult: "0x80004002 (NS_NOINTERFACE)" location: "JS frame :: javascript:alert(document.getElementsByTagName("marker")[0].style) :: <TOP_LEVEL> :: line 1" data: no]
Expected:
undefined or a normal style object.
This bug is similar to bug 313078, which was fixed. That bug was for <svg:script> while this bug is for <svg:marker>.
Comment 1•20 years ago
|
||
Is there a reason that nsSVGMarkerElement does
123 NS_INTERFACE_MAP_END_INHERITING(nsSVGElement)
Instead of its actual superclass (which would be nsSVGMarkerElementBase and which would allow it to QI to nsIDOMSVGStylable, as well as nsIDOMSVGLocatable and nsIDOMSVGTransformable?
Flags: blocking1.9a1?
| Assignee | ||
Updated•20 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Updated•20 years ago
|
Assignee: general → longsonr
Status: ASSIGNED → NEW
| Assignee | ||
Comment 3•20 years ago
|
||
Attachment #209344 -
Flags: review?(jwatt)
Comment 4•20 years ago
|
||
Attachment #209344 -
Flags: review?(jwatt) → review+
| Assignee | ||
Updated•20 years ago
|
Attachment #209344 -
Flags: superreview?(tor)
Attachment #209344 -
Flags: superreview?(tor) → superreview+
Comment 5•20 years ago
|
||
Checked in.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Updated•19 years ago
|
Flags: blocking1.9a1?
You need to log in
before you can comment on or make changes to this bug.
Description
•