Fixing bug 323589. Trying to access .style of <svg:marker> throws "Component does not have requested interface" (NS_NOINTERFACE). Patched by Robert Longson longsonr@gmail.com, r=jwatt@jwatt.org sr=tor@acm.org